test/spec_vectors/memory64/ok/module_8.wat
(module (memory i64 (data "x")) (func (export "memsize") (result i64) (memory.size)))