test/spec_vectors/memory64/fail/module_9.wat
(module (data (i64.const 0)))